fixed dark mode isue

--- a/src/theme.css
+++ b/src/theme.css
@@ -8,22 +8,6 @@ body.dark-theme {
     --bkg-color: #464646;
 }
 
-@media (prefers-color-scheme: dark) {
-
-    /* defaults to dark theme */
-    body {
-        --text-color: #eee;
-        --bkg-color: #3f3f3f;
-    }
-
-    body.light-theme {
-        --text-color: #222;
-        --bkg-color: #fff;
-    }
-
-
-}
-
 * {
     font-family: Arial, Helvetica, sans-serif;
 }
